--- a/package.json
+++ b/package.json
@@ -1,27 +1,48 @@
 {
   "name": "react-boilerplate",
-  "version": "0.0.0",
-  "description": "React boilerplate first version for Florida Blue CIA.",
-  "author": "CIA",
+  "version": "0.0.2",
+  "description": "React boilerplate for public and private consumption.",
+  "author": "David Dean <vermicious.knid.d@gmail.com>",
   "scripts": {
+    "build": "webpack -p",
+    "start": "webpack-dev-server --progress --colors"
   },
   "dependencies": {
-    "babel-polyfill": "^6.16.0",
-    "immutable": "^3.8.1",
-    "lodash": "^4.16.4",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
-    "react-router": "^3.0.0",
-    "redux": "^3.6.0",
+    "axios": "^0.15.3",
+    "material-ui": "^0.17.1",
+    "react": "^15.4.2",
+    "react-cookie": "^1.0.5",
+    "react-dom": "^15.4.2",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.0",
-    "babel-eslint": "^7.1.0",
-    "babel-preset-latest": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "eslint": "^3.9.0",
-    "webpack": "^2.1.0-beta.25"
+    "babel-core": "^6.24.0",
+    "babel-eslint": "^7.2.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-airbnb": "^2.2.3",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-register": "^6.24.0",
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
+    "eslint-watch": "^3.0.1",
+    "html-webpack-plugin": "^2.28.0",
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.4.2"
+  },
+  "keywords": [
+    "react",
+    "react boilerplate",
+    "boilerplate",
+    "webpack",
+    "stage-0"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/flapdragon/react-boilerplate.git"
   }
 }
