--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "David Dean <vermicious.knid.d@gmail.com>",
   "scripts": {
     "build": "webpack -p",
-    "start": "webpack-dev-server --progress --colors"
+    "start": "webpack-dev-server --progress --colors --inline --hot"
   },
   "dependencies": {
     "axios": "^0.15.3",
